fix bug on mobile

--- a/sass/index.scss
+++ b/sass/index.scss
@@ -357,6 +357,7 @@ body {
             align-items: center;
             padding: 1.5em 0 0 0;
             width: 100%;
+            position: relative;
             >div:first-child {
                 display: flex;
                 flex-direction: column;
